--- a/Day 4 Files/index.html
+++ b/Day 4 Files/index.html
@@ -7,10 +7,9 @@ Day 4 Arrays Examples -->
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Day 4 Examples</title>
-    <script src="js/day4_arrays.js"></script>
+    <title>Day 4 Files</title>
+    <script src="js/day4_prompts.js"></script>
 </head>
-<body>
 Hello World!
 </body>
 </html>
