--- a/Day 4 Files/index.html
+++ b/Day 4 Files/index.html
@@ -5,11 +5,12 @@ Day 4 Arrays Examples -->
 
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Day 4 Files</title>
-    <script src="js/day4_prompts.js"></script>
-</head>
-Hello World!
-</body>
+  <head lang="en">
+      <meta charset="UTF-8">
+      <title>Day 4 Files</title>
+      <script src="js/day4_casting.js"></script>
+  </head>
+    <body>
+      <p>Hey There!</p>
+    </body>
 </html>
