Basic if Statement & CSS File
Learned about if statements.
Added CSS File to the project.

--- a/Day 5 Files/index.html
+++ b/Day 5 Files/index.html
@@ -9,8 +9,9 @@ Day 5 Examples -->
       <meta charset="UTF-8">
       <title>Day 5 Files</title>
       <script src="js/day5_conditionals.js"></script>
+      <link rel="stylesheet" href="css/style.css">
   </head>
     <body>
-      <p>Hey There!</p>
+      <p>Day 5 Examples.</p>
     </body>
 </html>
