Logical Operators AND
Use && for AND. Both sides must be true in order for it to be true.

--- a/Day 5 Files/index.html
+++ b/Day 5 Files/index.html
@@ -8,7 +8,7 @@ Day 5 Examples -->
   <head lang="en">
       <meta charset="UTF-8">
       <title>Day 5 Files</title>
-      <script src="js/day5_conditionals.js"></script>
+      <script src="js/day5_logical.js"></script>
       <link rel="stylesheet" href="css/style.css">
   </head>
     <body>
