--- a/Day 5 Files/index.html
+++ b/Day 5 Files/index.html
@@ -8,10 +8,11 @@ Day 5 Examples -->
   <head lang="en">
       <meta charset="UTF-8">
       <title>Day 5 Files</title>
-      <script src="js/day5_logical.js"></script>
+      <script src="js/day5_ternary.js"></script>
       <link rel="stylesheet" href="css/style.css">
   </head>
     <body>
-      <p>Day 5 Examples.</p>
+      <h1>Day 5 Examples.</h1>
+      <h2>Mwuahahaha</h2>
     </body>
 </html>
