--- a/Day 4 Files/Day4LabExpressions/Expressions_Personal/index.html
+++ b/Day 4 Files/Day4LabExpressions/Expressions_Personal/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="en">
+    <meta charset="UTF-8">
     <title>Day 4 Expressions Lab Personal</title>
     <script src="js/script.js"></script>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    Hello World!
+    <h1>Personal Expression</h1>
   </body>
 </html>
