Create working files for Day 6 Examples
Also retitled the index pages for the assignment.

--- a/Day 6 Files/Day6LabConditionals/Conditionals_Personal/index.html
+++ b/Day 6 Files/Day6LabConditionals/Conditionals_Personal/index.html
@@ -7,7 +7,7 @@ Day 6 Conditionals Assignment -->
 <html>
   <head lang="en">
     <meta charset="UTF-8">
-    <title>Day 4 Expressions Lab Personal</title>
+    <title>Day 6 Conditionals Lab Personal</title>
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
