--- a/Day 6 Files/index.html
+++ b/Day 6 Files/index.html
@@ -1,17 +1,17 @@
 <!-- Cory Wilson
 05/16/14
 WPF Section 1
-Day 6 Conditionals Assignment -->
+Day 6 Examples -->
 
 <!DOCTYPE html>
 <html>
   <head lang="en">
     <meta charset="UTF-8">
-    <title>Day 6 Conditionals Lab Wacky</title>
-    <script src="js/script.js"></script>
+    <title>Day 6 Examples</title>
+    <script src="js/day6_Elseif.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Wacky Expression</h1>
+    <h1>Day 6 Examples</h1>
   </body>
 </html>
