Math Class is in Session!
Learning about rounding, floor, and ceiling.

--- a/Day 6 Files/index.html
+++ b/Day 6 Files/index.html
@@ -8,7 +8,7 @@ Day 6 Examples -->
   <head lang="en">
     <meta charset="UTF-8">
     <title>Day 6 Examples</title>
-    <script src="js/day6_Nestingifs.js"></script>
+    <script src="js/day6_Math.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
