--- a/Day 7 Files/index.html
+++ b/Day 7 Files/index.html
@@ -8,10 +8,10 @@ Day 7 Examples -->
   <head lang="en">
     <meta charset="UTF-8">
     <title>Day 7 Examples</title>
-    <script src="js/script.js"></script>
+    <script src="js/day7_WhileLoops.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Day 7 Loops Worksheet</h1>
+    <h1>Day 7 Files</h1>
   </body>
 </html>
