While and Do While
Worked on the two pages. Trying to understand the difference between
the two types of loops.

--- a/Day 7 Files/Loops_worksheet/while/index.html
+++ b/Day 7 Files/Loops_worksheet/while/index.html
@@ -1,7 +1,7 @@
 <!-- Cory Wilson
 05/19/14
 WPF Section 1
-Day 7 Examples -->
+Day 7 While Loops -->
 
 <!DOCTYPE html>
 <html>
@@ -12,6 +12,6 @@ Day 7 Examples -->
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Day 7 Examples</h1>
+    <h1>Day 7 While Loops</h1>
   </body>
 </html>
