--- a/Day 7 Files/Loops_worksheet/for/index.html
+++ b/Day 7 Files/Loops_worksheet/for/index.html
@@ -8,7 +8,7 @@ Day 7 Examples -->
   <head lang="en">
     <meta charset="UTF-8">
     <title>Day 7 Examples</title>
-    <script src="js/while.js"></script>
+    <script src="js/for.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
