--- a/Day 8 Files/Class Examples/index.html
+++ b/Day 8 Files/Class Examples/index.html
@@ -8,7 +8,7 @@ Day 8 Examples -->
   <head lang="en">
     <meta charset="UTF-8">
     <title>Day 8 Examples</title>
-    <script src="js/day8_ArrayLoop.js"></script>
+    <script src="js/day8_LoopArrays.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
