Create Day 9 Files
Starting Examples for Day 9 Files

--- a/Day 9 Files/Class Examples/index.html
+++ b/Day 9 Files/Class Examples/index.html
@@ -1,17 +1,17 @@
 <!-- Cory Wilson
-05/21/14
+05/23/14
 WPF Section 1
-Day 8 Examples -->
+Day 9 Examples -->
 
 <!DOCTYPE html>
 <html>
   <head lang="en">
     <meta charset="UTF-8">
     <title>Day 8 Examples</title>
-    <script src="js/day8_Return.js"></script>
+    <script src="js/day9_RandomNumbers.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Day 8 Files</h1>
+    <h1>Day 9 Files</h1>
   </body>
 </html>
