--- a/Day 9 Files/Class Examples/index.html
+++ b/Day 9 Files/Class Examples/index.html
@@ -7,8 +7,8 @@ Day 9 Examples -->
 <html>
   <head lang="en">
     <meta charset="UTF-8">
-    <title>Day 8 Examples</title>
-    <script src="js/day9_RandomNumbers.js"></script>
+    <title>Day 9 Examples</title>
+    <script src="js/day9_Procedures.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
