--- a/Day 9 Files/Class Examples/index.html
+++ b/Day 9 Files/Class Examples/index.html
@@ -8,7 +8,7 @@ Day 9 Examples -->
   <head lang="en">
     <meta charset="UTF-8">
     <title>Day 9 Examples</title>
-    <script src="js/day9_Multiple.js"></script>
+    <script src="js/day9_Anonymous.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
