Retitled Personal Script
also adjusted link on index page

--- a/Week4_Functions_Assignment/Functions_Personal/index.html
+++ b/Week4_Functions_Assignment/Functions_Personal/index.html
@@ -8,7 +8,7 @@ Functions Assignment - Personal -->
   <head lang="en">
     <meta charset="UTF-8">
     <title>Functions Assignment - Personal</title>
-    <script src="js/script.js"></script>
+    <script src="js/personal_script.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
