Adjusted css, retitled js files and index pages
added more descriptive titles

--- a/Week4_Functions_Assignment/Functions_Industry/index.html
+++ b/Week4_Functions_Assignment/Functions_Industry/index.html
@@ -7,11 +7,11 @@ Functions Assignment - Industry -->
 <html>
   <head lang="en">
     <meta charset="UTF-8">
-    <title>Functions Assignment - Industry</title>
-    <script src="js/script.js"></script>
+    <title>Industry - Functions Assignment</title>
+    <script src="js/industry_script.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Functions Assignment - Industry</h1>
+    <h1>Industry - Functions Assignment</h1>
   </body>
 </html>
