--- a/Week4_Functions_Assignment/Functions_Personal/index.html
+++ b/Week4_Functions_Assignment/Functions_Personal/index.html
@@ -7,11 +7,11 @@ Functions Assignment - Personal -->
 <html>
   <head lang="en">
     <meta charset="UTF-8">
-    <title>Functions Assignment - Personal</title>
+    <title>Personal - Functions Assignment</title>
     <script src="js/personal_script.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Functions Assignment - Personal</h1>
+    <h1>Personal - Functions Assignment</h1>
   </body>
 </html>
