--- a/Week4_Functions_Assignment/Functions_Wacky/index.html
+++ b/Week4_Functions_Assignment/Functions_Wacky/index.html
@@ -7,11 +7,11 @@ Functions Assignment - Wacky -->
 <html>
   <head lang="en">
     <meta charset="UTF-8">
-    <title>Functions Assignment - Wacky</title>
-    <script src="js/script.js"></script>
+    <title>Wacky - Functions Assignment</title>
+    <script src="js/wacky_script.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Functions Assignment - Wacky</h1>
+    <h1>Wacky - Functions Assignment</h1>
   </body>
 </html>
